--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "framer-motion": "^12.33.0",
+    "lenis": "^1.3.17",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.555.0",
