feat: updated with latest info and seeded colleges

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/hackfest26dev"
 
 # Do `openssl rand -base64 32` and use that as auth secret
 AUTH_SECRET=""
+AUTH_URL=""
 
 #Contact Nandan or Rahul for Dev GitHub Creds
+
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
 
 #Contact Nandan or Rahul for the below creds too
 NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=""
@@ -22,3 +22,14 @@ RAZORPAY_SECRET=""
 RAZORPAY_WEBHOOK_SECRET=""
 
 NEXT_PUBLIC_RAZORPAY_API_KEY_ID=""
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+NEXT_PUBLIC_TEAM_NAME_CHECK_API_URL=""
+
+SMTP_HOST=""
+SMTP_PORT=""
+SMTP_SECURE=""
+SMTP_USER=""
+SMTP_PASS=""
